2007-10-04  Dan Locks <dwlocks@zmanda.com>
	* amanda.spec: add .spec file Zmanda uses for community builds
	
2007-10-04  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/device.c device-src/Makefile.am configure.in: add
	  WANT_TAPE_DEVICE conditional, for machines that have no tape
	  support whatsoever (Mac OS X)

2007-10-03  Dan Locks <dwlocks@zmanda.com>
	* configure.in: Added /opt/local/bin AC_PATH_PROG(PKG_CONFIG.. for 
	  mac osx and macports

2007-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Go in degraded mode after out of tape.

2007-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Fix indentation.

2007-10-02  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amcheck.c: Fix typo in merge found by
	  martineau@zmanda.com

2007-10-01  Ian Turner <ian@zmanda.com>
	* device-src/rait-device.c, device-src/queueing.c,
	  device-src/tests/device_test.c, device-src/device.h,
	  device-src/device.c: Remove device_is_eof() function in favor of
	  accessing is_eof member directly.

2007-10-01  Dustin J. Mitchell <dustin@zmanda.com>
	Coverity bug #237
	* amandad-src/amandad.c: fix a use-after-free

2007-10-01  Ian Turner <ian@zmanda.com>
	* device-src/device.c: Automatically register the CANONICAL_NAME
	  property for all devices.

2007-10-01  Ian Turner <ian@zmanda.com>
	* device-src/tape-posix.c: Use MTEOD on systems that have it but not
	  MTEOM.

2007-10-01  Ian Turner <ian@zmanda.com>
	* device-src/device.c, device-src/vfs-device.c,
	  device-src/rait-device.c: Use g_strdup() instead of strdup().

2007-10-01  Ian Turner <ian@zmanda.com>
	* changer-src/chg-lib.sh.in: Fix some compilation problems on
	  Solaris 10.

2007-09-25  Dan Locks <dwlocks@zmanda.com>
	* common-src/util.c: cast uid_t to long long for printf formatting

2007-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* oldrecover-src/Makefile.am changer-src/Makefile.am
	  client-src/Makefile.am amandad-src/Makefile.am